subiendo practica final

--- a/practica-crosell/myproject/template/index.html
+++ b/practica-crosell/myproject/template/index.html
@@ -5,6 +5,7 @@
 <title>Actividades en Madrid</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
+<link rel="shortcut icon" type="image/x-icon" href="/css/images/favicon.ico">
 <link href="/css/default.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 body {margin:0;
